--- a/zira-music-bot/frontend-mini-app/index.html
+++ b/zira-music-bot/frontend-mini-app/index.html
@@ -201,7 +201,7 @@
         <header>
             <div class="header-top">
                 <div class="header-actions-group">
-                    <button id="themeToggle" title="Toggle Dark/Light Mode">🌙</button>
+                    <button id="themeToggle" title="Toggle Dark/Light Mode" aria-label="Toggle theme">🌙</button>
                     <button id="menuBtn" title="Menu" aria-label="Menu">
                         <svg width="28" height="28" viewBox="0 0 32 32" class="icon-svg"><circle cx="16" cy="8" r="2.2"/><circle cx="16" cy="16" r="2.2"/><circle cx="16" cy="24" r="2.2"/></svg>
                     </button>
@@ -218,75 +218,48 @@
         </header>
         <main>
             <div class="search-bar-container">
-                <input type="text" id="searchInput" placeholder="Search songs or artists..." />
-                <button id="searchBtn" title="Search"><svg class="icon-svg" width="22" height="22" viewBox="0 0 24 24"><circle cx="11" cy="11" r="7" stroke="currentColor" stroke-width="2" fill="none"/><line x1="16.5" y1="16.5" x2="21" y2="21" stroke="currentColor" stroke-width="2"/></svg></button>
+                <input type="text" id="searchInput" placeholder="Search songs or artists..." aria-label="Search songs or artists" />
+                <button id="searchBtn" title="Search" aria-label="Search">🔍</button>
             </div>
-            <div class="demo-song-container" style="text-align:center; margin-bottom: 10px;">
-                <button id="addDemoSongBtn" style="padding: 12px 28px; font-size: 1.1rem; border-radius: 10px; background: #5e60ce; color: #fff; border: none; cursor: pointer; font-weight: 600; box-shadow: 0 2px 8px rgba(40,40,80,0.10);">Add Demo Song 🎵</button>
-            </div>
-            <div class="player spotify-style">
-                <div class="album-art-large">
-                    <img src="assets/images/default_album_art.png" alt="Album Art" id="albumArtLarge">
+            <div id="searchResults" class="search-results-dropdown" style="display:none;"></div>
+            <section class="now-playing">
+                <div class="album-art-large" id="albumArtLarge">
+                    <img id="albumArt" src="assets/images/default_album_art.png" alt="Album Art" class="album-art" />
+                    <div id="audioLoadingSpinner" class="audio-loading-spinner" style="display:none;"></div>
                 </div>
                 <div class="song-info">
-                    <span id="songTitle">No song playing</span>
-                    <span id="songArtist"></span>
+                    <h2 id="songTitle">No song playing</h2>
+                    <p id="songArtist"></p>
+                    <span id="songDuration">0:00</span>
+                    <div id="songRequestedBy" class="song-requested-by"></div>
                 </div>
-                <audio id="audioPlayer" controls>
-                    <source id="audioSource" src="">
-                    Your browser does not support the audio element.
-                </audio>
-                <div class="progress-bar-container">
+                <div class="progress-container">
                     <span id="currentTime">0:00</span>
-                    <div class="progress-bar-bg">
-                        <div class="progress-bar" id="progressBar"></div>
-                    </div>
-                    <span id="totalDuration">0:00</span>
+                    <input type="range" id="progressBar" value="0" min="0" max="100" aria-label="Seek">
+                    <span id="totalTime">0:00</span>
                 </div>
-                <div class="controls">
-                    <button id="prevBtn" title="Previous" aria-label="Previous">
-                        <svg class="icon-svg" viewBox="0 0 32 32" width="28" height="28"><path d="M20 8v16l-10-8z" fill="currentColor"/><rect x="22" y="8" width="2" height="16" rx="1" fill="currentColor"/></svg>
-                        <span class="button-tooltip" id="prevTooltip">No previous song</span>
+                <div class="controls" role="group" aria-label="Player controls">
+                    <button id="prevBtn" aria-label="Previous song">⏮️</button>
+                    <button id="playPauseBtn" aria-label="Play/Pause">
+                        <span id="playIcon">▶️</span>
+                        <span id="pauseIcon" style="display:none;">⏸️</span>
                     </button>
-                    <button id="playPauseBtn" title="Play/Pause" aria-label="Play/Pause">
-                        <svg id="playPauseAnimated" class="icon-svg animated-playpause" viewBox="0 0 32 32" width="32" height="32">
-                            <g class="play-shape">
-                                <polygon points="8,6 26,16 8,26" fill="currentColor"/>
-                            </g>
-                            <g class="pause-shape" style="opacity:0;">
-                                <rect x="8" y="6" width="5" height="20" rx="2" fill="currentColor"/>
-                                <rect x="19" y="6" width="5" height="20" rx="2" fill="currentColor"/>
-                            </g>
-                        </svg>
-                        <span class="button-tooltip" id="playTooltip">No song to play</span>
-                    </button>
-                    <button id="favBtn" title="Favorite" aria-label="Favorite">
-                        <svg id="heartIcon" class="icon-svg animated-heart" viewBox="0 0 32 32" width="28" height="28">
-                            <path d="M16 28s-10-6.6-10-13.2C6 8.4 9.2 6 12.4 6c2.1 0 3.6 1.2 4.6 2.4C18 7.2 19.5 6 21.6 6 24.8 6 28 8.4 28 14.8 28 21.4 16 28 16 28z" fill="none" stroke="currentColor" stroke-width="2"/>
-                        </svg>
-                        <span class="button-tooltip" id="favTooltip">No song to favorite</span>
-                    </button>
-                    <button id="skipFwdBtn" title="Skip" aria-label="Skip">
-                        <svg class="icon-svg" viewBox="0 0 32 32" width="28" height="28"><path d="M12 8v16l10-8z" fill="currentColor"/><rect x="8" y="8" width="2" height="16" rx="1" fill="currentColor"/></svg>
-                        <span class="button-tooltip" id="skipTooltip">No next song</span>
-                    </button>
-                    <button id="loopBtn" title="Loop" aria-label="Loop">
-                        <svg class="icon-svg" viewBox="0 0 32 32" width="28" height="28"><path d="M8 16c0-4.4 3.6-8 8-8s8 3.6 8 8-3.6 8-8 8-8-3.6-8-8z" fill="none" stroke="currentColor" stroke-width="2"/></svg>
-                    </button>
+                    <button id="nextBtn" aria-label="Next song">⏭️</button>
+                    <button id="loopBtn" aria-label="Loop">🔁</button>
                 </div>
-            </div>
+                <audio id="audioPlayer" preload="auto"></audio>
+            </section>
+            <button id="openWebPlayerBtn" style="margin: 16px 0; font-size: 1.1em; width: 100%; background: #5e60ce; color: #fff; border: none; border-radius: 8px; padding: 12px 0; cursor: pointer;">🎵 Open Full Music Player</button>
+            <section class="queue-section">
+                <h3>Up Next</h3>
+                <ul id="queueList" aria-label="Song queue"></ul>
+            </section>
             <form id="addSongForm" class="add-song-form">
                 <input type="text" id="songTitleInput" placeholder="Song Title" required />
                 <input type="text" id="songArtistInput" placeholder="Artist" required />
                 <input type="text" id="songSrcInput" placeholder="Audio URL (optional)" />
                 <button type="submit">Add Song</button>
             </form>
-            <section class="queue-section">
-                <h2>Queue</h2>
-                <ul id="queueList">
-                    <li>No songs in queue</li>
-                </ul>
-            </section>
             <section class="history-section">
                 <h2>History</h2>
                 <div class="history-controls">
@@ -309,5 +282,8 @@
     <div class="share-notification" id="shareNotification">Room link copied!</div>
     <audio id="clickSound" src="https://cdn.pixabay.com/audio/2022/07/26/audio_124bfae2b2.mp3" preload="auto" style="display:none;"></audio>
     <div id="toast" class="toast"></div>
+    <div class="centered">
+        <button id="joinRoomBtn" class="animated-btn">✨ Join Music ✨</button>
+    </div>
 </body>
 </html>
