--- a/zira-music-bot/frontend-mini-app/index.html
+++ b/zira-music-bot/frontend-mini-app/index.html
@@ -36,13 +36,14 @@
             <button onclick="showStats()" class="stats-btn">Show Stats</button>
         </div>
         <div class="search-bar-container">
-            <input type="text" id="search-bar" class="search-bar" placeholder="Search for songs, artists, albums..." />
-            <button class="search-icon-btn" title="Search">
+            <input type="text" id="search-bar" class="search-bar" placeholder="Search for songs, artists, albums or type a song name for AI..." />
+            <button class="search-icon-btn" title="Search" onclick="aiPlayRequestFromSearch()">
                 <svg width="22" height="22" fill="none" stroke="#a78bfa" stroke-width="2" viewBox="0 0 24 24">
                     <circle cx="11" cy="11" r="8"/>
                     <line x1="21" y1="21" x2="16.65" y2="16.65"/>
                 </svg>
             </button>
+            <button class="recommend-btn" onclick="personalRecommend()">Recommend for Me</button>
         </div>
         <div class="zira-music-player">
             <div class="album-art-container">
